--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,17 @@ p {
 
 
 @media (max-width: 768px) {
+	html body {
+		padding: 10px;
+		padding-top:50px;
+	}
 	.splash {
 		margin-bottom: 25px;
 	}
 	ul {
+		padding-left:60px;
+		margin-left: 50px;
+		margin-right: 50px;
 		font-size: 0.8em
 	}
 	.splash img {
